Added get_reservation
